Fix header image alignment

--- a/src/_assets/scss/main.scss
+++ b/src/_assets/scss/main.scss
@@ -17,7 +17,9 @@ $c-grey: #c0bfbe;
 
     &:before {
       background-image: url("/_assets/img/singlePhone.png");
-      background-size: cover;
+      background-size: 80%;
+      background-repeat: no-repeat;
+      background-position: top center;
       content: "";
       height: 325px;
       width: 323px;
